<resources>
    <string name="app_name">demtalk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_register_button">Register New User</string>
    <string name="login_clear">Clear Text</string>
    <string name="blank_textboxes">Please add a username and password.</string>
    <string name="service_name">mark-pc</string>
    <string name="host_name">192.168.1.122</string>
    <string name="couldnt_login_message">Could not login, please ensure details are correct</string>
    <string name="user_details_not_provided">User details not provided</string>

    <string name="title_activity_register">Register</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="back_to_login_button">Back to Login</string>
    <string name="register_clear">Clear Text</string>
    <string name="account_created">Account created</string>
    <string name="couldnt_register_message">Could not register details, username may already exist</string>

    <string name="title_activity_main">Home Page</string>
    <string name="rooms_textview">Available Chat Rooms</string>
    <string name="main_info_text">Scroll and select to view chat rooms.
        Hit the speech bubble to create your own, or another icon to navigate between pages.</string>
    <string name="no_chat_rooms">No chat rooms created yet. Click the speech bubble to create your own!</string>
    <string name="main_post_topic">Create Chat Room</string>
    <string name="subject_hint">Displayed for users to select on the home screen</string>
    <string name="message_hint">First message displayed when users enter room</string>
    <string name="main_log_out">Log Out</string>
    <string name="progress_title">Adding Chat Rooms</string>
    <string name="progress_message">Please wait...</string>
    <string name="subjects_found">Subjects found</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="message_not_provided">Message not provided</string>

    <string name="title_activity_create_chat_room">CreateChatRoom</string>
    <string name="create_subject">Subject</string>
    <string name="create_message">Message</string>
    <string name="post_topic_button">Create Room</string>
    <string name="create_chat_to_main">Back to Main</string>
    <string name="no_subjects">Please enter a valid subject</string>
    <string name="subject_exists">Subject already exists, please try another.
        Please check the home screen if you are unsure.</string>
    <string name="no_chat_room">Could not create chat, please try again</string>
    <string name="chat_created">Chat created</string>
    <string name="couldnt_create_chat">Could not create chat, please try again</string>
    <string name="no_chat_details">Chat details not provided</string>

    <string name="title_activity_display_chat">DisplayChat</string>
    <string name="add_message_button">Add Message</string>
    <string name="add_message_hint">Message will appear in conversation above</string>
    <string name="display_chat_to_main">Back to Main</string>
    <string name="add_message_textview">Enter Message</string>
    <string name="progress_title_display">Finding Messages</string>
    <string name="no_room_message">Room information not passed</string>
    <string name="couldnt_find_chat">Could not find chat, please try again</string>
    <string name="couldnt_send">Could not send message</string>
    <string name="couldnt_display">Could not display chat history</string>
    <string name="no_messages">No messages currently available</string>
    <string name="message_received">Message received!</string>
    <string name="chat_found">Chat found</string>
    <string name="please_add_message">Please add message</string>
    <string name="message_intro">Messages will appear below. If none appear feel free to add your own
        and get the conversation started.</string>
    <string name="no_chat_room_provided">Chat room not provided</string>

    <string name="title_activity_display_links">DisplayLinks</string>
    <string name="links_title">Links and Useful Information</string>
    <string name="display_links_intro">Save and display links for reference.</string>
    <string name="add_link"><u>Link Address (must enter full address,including \'http://\' to create direct link)</u></string>
    <string name="add_name"><u>Link Name (e.g. \'Google\', \'Article About X\')</u></string>
    <string name="add_link_button">Add Link</string>
    <string name="clear_link_button">Remove a Link</string>
    <string name="remove_link_confirmation">Enter link name to remove</string>
    <string name="please_enter_link">No name found, please enter a link name</string>
    <string name="no_link_added_message">Please add a valid address and name</string>
    <string name="link_name_taken">This name has already been used,
        please enter a unique name</string>
    <string name="link_not_found">Link not found</string>
    <string name="couldnt_open">Could not access stored links</string>
    <string name="couldnt_display_links">Could not display stored links</string>
    <string name="incorrect_link_format">Incorrect link format, link could not be created</string>
    <string name="clickable_link"><a href="http://google.com/">This is a link to google.com</a></string>

    <color name="Azure">#336699</color>
    <color name="White">#FFFFFF</color>
    <color name="SeaGreen">#33CCCC</color>

    <string name="create_chat_icon">Create Chat Room</string>
    <string name="main_menu_icon">Display All Rooms</string>
    <string name="display_links_icon">Display Links</string>
    <string name="log_out_icon">Log Out</string>
    <string name="title_activity_test">TestActivity</string>


</resources>
