<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/display_links_layout">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="5dp">

        <TextView style="@style/EditTextFont"
            android:id="@+id/links_textview"
            android:text="@string/links_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/display_links_intro"
            android:text="@string/display_links_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textIsSelectable="true"/>

        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add_link"
            android:textColor="@color/White"
            android:textIsSelectable="true"/>

        <EditText
            android:id="@+id/add_link_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add_name"
            android:textColor="@color/White"
            android:textIsSelectable="true"/>

        <EditText
            android:id="@+id/add_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button style="@style/NiceButton"
            android:id="@+id/add_link_button"
            android:text="@string/add_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/clear_link_button"
            android:text="@string/clear_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="@color/White"
            android:textIsSelectable="true"/>
        <TextView
            android:id="@+id/show_links_button"
            android:text="Show Links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="@color/White"
            android:textIsSelectable="true"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp">

        <ListView
            android:id="@+id/listView"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:divider="@color/White"
            android:dividerHeight="1px"
            />

    </LinearLayout>

</LinearLayout>
